--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,14 @@
 <header role="banner">
-
   <div>
 
-    <a href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    <a href="{{ " / " | relative_url}}">{{ site.title | escape }}</a>
 
     <nav>
       <div>
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
+        {% for my_page in site.pages %} {% if my_page.title %}
+        <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a> {% endif %} {% endfor %}
       </div>
     </nav>
 
   </div>
-
 </header>
