--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,12 @@
 {% include head.html %}
 {% include skiplinks.html %}
-{% include header.html hideOnDesktop='true' megamenu='true' %}
+{% include header.html hideOnDesktopx='true' megamenu='true' %}
 {% include cookiebar.html %}
 {% include offcanvas.html %}
 
-{{ content }}
+<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl">
+  {{ content }}
+</div>
 
 {% include scrolltop.html %}
 {% include footer.html %}
