--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
     <h1>{{ page.title | escape }}</h1>
   </header>
 
-  <div>
+  <div class="Prose u-layout-prose">
     {{ content }}
   </div>
 
