--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article itemscope itemtype="http://schema.org/BlogPosting">
+<article itemscope itemtype="http://schema.org/BlogPosting" class="Prose u-layout-prose">
 
   <header>
     <h1 itemprop="name headline">{{ page.title | escape }}</h1>
