--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html lang="{{ page.lang | default: site.lang | default: "en" }}"><![endif]-->
-<!--[if IE 9]><html lang="{{ page.lang | default: site.lang | default: "en" }}"><![endif]-->
+<!--[if IE 8]><html lang="{{ page.lang | default: site.lang | default: "en" }}" class="no-js"><![endif]-->
+<!--[if IE 9]><html lang="{{ page.lang | default: site.lang | default: "en" }}" class="no-js"><![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}" class="no-js">
 <!--<![endif]-->
 
 <head>
