--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 {% include head.html %}
 {% include skiplinks.html %}
-{% include header.html hideOnDesktopx='true' megamenu='true' %}
+
+{% include header.html hideOnDesktop=true megamenu=true isFixed=false %}
+
 {% include cookiebar.html %}
 {% include offcanvas.html %}
 
