--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,8 @@ layout: default
   <h1>Home</h1>
   <p>
     <p>In quis consequat amet est officia nostrud fugiat esse voluptate ex sint eu. Non deserunt adipisicing minim aliqua dolore deserunt ad aliquip occaecat esse pariatur pariatur culpa. Laborum nisi nostrud eiusmod ut labore ea ullamco deserunt sint cupidatat laboris tempor laboris aute. Sit labore fugiat laboris do voluptate amet veniam ipsum. Nisi aute irure magna fugiat nostrud culpa culpa excepteur eu nostrud officia aliqua ad proident consequat amet ad. Voluptate deserunt Lorem pariatur ut exercitation culpa elit id adipisicing sint occaecat ea consectetur adipisicing. Consectetur ad deserunt aliquip qui ipsum non ea tempor est proident fugiat ullamco eu sint.</p>
-    <p>Qui quis cupidatat commodo sunt nostrud sunt ullamco do culpa reprehenderit officia cillum sunt elit dolore. Adipisicing tempor eu aute qui labore do et ut adipisicing dolor culpa laborum nulla irure eiusmod. Exercitation esse cillum cillum nulla ea velit enim tempor cupidatat esse sit aliqua. Aliqua est consequat excepteur cupidatat sunt culpa sit duis fugiat non aliquip fugiat ea. Nulla duis nostrud officia mollit occaecat reprehenderit commodo exercitation et dolore quis enim ipsum ut esse. Deserunt anim consequat consequat sit incididunt aliquip exercitation amet ea do commodo reprehenderit aliquip commodo duis ipsum sit.</p>
-    </p>
   </div>
+
   {{ content }}
 
     <ul class="Linklist Linklist--padded">
@@ -20,6 +19,37 @@ layout: default
         </li>
       {% endfor %}
     </ul>
+
+    <section class="Grid Grid--withGutter u-padding-all-l">
+      {% for i in (1..3) %}
+      <div class="Grid-cell u-md-size1of3 u-lg-size1of3">
+        {% include card.html
+          title='Title'
+          link='//example.com'
+          subtitle='Subtitle'
+          text='Occaecat sunt fugiat cillum est in cillum dolore ea dolore.'
+          image='//placehold.it/400x220'
+          alt='Alt text'
+        %}
+      </div>
+      {% endfor %}
+    </section>
+
+    <section class="Grid Grid--withGutter u-padding-all-l">
+      {% for i in (1..3) %}
+      <div class="Grid-cell u-md-size1of3 u-lg-size1of3">
+        {% include card-gallery.html
+          title='Title'
+          link='//example.com'
+          subtitle='Subtitle'
+          text='Occaecat sunt fugiat cillum est in cillum dolore ea dolore.'
+          image='//placehold.it/400x220'
+          alt='Alt text'
+          icon='camera'
+        %}
+      </div>
+      {% endfor %}
+    </section>
 
 
 </div>
