--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,19 @@
 ---
 layout: default
 ---
-<article>
 
-  <header>
-    <h1>{{ page.title | escape }}</h1>
-  </header>
+<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-r-left u-padding-r-right">
 
-  <div class="Prose u-layout-prose">
-    {{ content }}
-  </div>
+  <article>
 
-</article>
+    <header>
+      <h1>{{ page.title | escape }}</h1>
+    </header>
+
+    <div class="Prose u-layout-prose">
+      {{ content }}
+    </div>
+
+  </article>
+
+</div>
