--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="Header-banner">
     <div class="Header-owner Headroom-hideme">
-      <a href=""><span>{{ site.owner }}</span></a>
+      <a href="{{ site.owner_link }}"><span>{{ site.owner }}</span></a>
       {% include lang_switch.html %}
     </div>
   </div>
@@ -25,7 +25,7 @@
 
     <div class="Header-title Grid-cell">
       <h1 class="Header-titleLink">
-        <a href="{{ " / " | relative_url}}">{{ site.title | escape }}<br>
+        <a href="{{ "/" | relative_url}}">{{ site.title | escape }}<br>
           <small>{{ site.subtitle }}</small>
         </a>
       </h1>
@@ -71,12 +71,5 @@
     {% endif %}
   </div>
   {% endif %}
-
-    <!-- <nav>
-      <div>
-        {% for my_page in site.pages %} {% if my_page.title %}
-        <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a> {% endif %} {% endfor %}
-      </div>
-    </nav> -->
 
 </header>
