--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 {% include cookiebar.html %}
 {% include offcanvas.html %}
 
-{{ content }}
+<div id="main">
+  {{ content }}
+</div>
 
 {% include scrolltop.html %}
 {% include footer.html %}
