--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,16 +4,9 @@ layout: default
 
 <div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-r-left u-padding-r-right">
 
-  <article>
-
-    <header>
+  <article class="Prose u-layout-prose">
       <h1>{{ page.title | escape }}</h1>
-    </header>
-
-    <div class="Prose u-layout-prose">
       {{ content }}
-    </div>
-
   </article>
 
 </div>
