--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+{% assign active_lang = page.lang | default: site.lang | default: "en" %}
+{% assign t = site.data.l10n[active_lang].t %}
+
 {% include head.html %}
 {% include skiplinks.html %}
 
