--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 
     <div class="Header-title Grid-cell">
       <h1 class="Header-titleLink">
-        <a href="{{ homepage_link | relative_url }}">{{ t.site_title }}<br>
+        <a href="{{ homepage_link | relative_url }}">{{ t.site_title | default: site.title | escape }}<br>
           <small>{{ t.site_subtitle | default: site.subtitle | escape }}</small>
         </a>
       </h1>
@@ -39,20 +39,21 @@
 
     <div class="Header-searchTrigger Grid-cell">
       <button aria-controls="header-search" class="js-Header-search-trigger Icon Icon-search"
-        title="attiva il form di ricerca" aria-label="attiva il form di ricerca" aria-hidden="false">
+        title="{{ t.search_form_on }}" aria-label="{{ t.search_form_on }}" aria-hidden="false">
       </button>
       <button aria-controls="header-search" class="js-Header-search-trigger Icon Icon-close u-hidden"
-        title="disattiva il form di ricerca" aria-label="disattiva il form di ricerca" aria-hidden="true">
+        title="{{ t.search_form_off }}" aria-label="{{ t.search_form_off }}" aria-hidden="true">
       </button>
     </div>
 
     <div class="Header-utils Grid-cell">
       <div class="Header-social Headroom-hideme">
-        <p>Seguici su:</p>
+        <p>{{ t.follow_us | capitalize }}:</p>
         <ul class="Header-socialIcons">
-          <li><a href="" title="Facebook"><span class="Icon-facebook"></span><span class="u-hiddenVisually">Facebook</span></a></li>
-          <li><a href="" title="Twitter"><span class="Icon-twitter"></span><span class="u-hiddenVisually">Twitter</span></a></li>
-          <li><a href="" title="Youtube"><span class="Icon-youtube"></span><span class="u-hiddenVisually">Youtube</span></a></li>
+          {% for social in site.data.social %}
+            <li><a href="{{ social[1].link }}" title="{{ social[1].name }}"><span class="Icon-{{ social[0] }}"></span>
+              <span class="u-hiddenVisually">{{ social[1].name | capitalize }}</span></a></li>
+          {% endfor %}
         </ul>
       </div>
       <div class="Header-search" id="header-search">
