--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+{% assign active_lang = page.lang | default: site.lang | default: "en" %}
+{% assign t = site.data.l10n[active_lang].t %}
+
 {{ content }}
 
 {% include hero.html
