--- a/_includes/search_form.html
+++ b/_includes/search_form.html
@@ -1,8 +1,9 @@
 <form class="Form">
   <div class="Form-field Form-field--withPlaceholder Grid" role="search">
-    <input class="Form-input Grid-cell u-sizeFill u-text-r-s" required id="cerca">
-    <label class="Form-label" for="cerca">Cerca...</label>
-    <button class="Grid-cell u-sizeFit Icon-search u-background-60 u-color-white u-padding-all-s u-textWeight-700" title="Avvia la ricerca" aria-label="Avvia la ricerca">
+    <input class="Form-input Grid-cell u-sizeFill u-text-r-s" required id="search">
+    <label class="Form-label" for="search">{{ t.search_form_label | capitalize }}...</label>
+    <button class="Grid-cell u-sizeFit Icon-search u-background-60 u-color-white u-padding-all-s u-textWeight-700"
+      title="t.search_form_start" aria-label="{{ t.search_form_start }}">
     </button>
   </div>
 </form>
