--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,7 +1,7 @@
 <div class="Share">
   <div class="Share-reveal js-Share">
     <a href="#share-options" class="Share-revealText" data-menu-trigger="share-options">
-      <span class="Share-revealIcon Icon Icon-share"></span> Condividi
+      <span class="Share-revealIcon Icon Icon-share"></span> {{ t.share_msg | capitalize }}
     </a>
   </div>
   <ul id="share-options" class="Dropdown-menu" data-menu>
