--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,33 @@
 layout: default
 ---
 
-<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-r-left u-padding-r-right">
+{% assign active_lang = page.lang | default: site.lang | default: "en" %}
+{% assign t = site.data.l10n[active_lang].t %}
 
-  <article class="Prose u-layout-prose">
-      <h1>{{ page.title | escape }}</h1>
-      {{ content }}
-  </article>
+<div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-r-left u-padding-r-right">
+  <div class="Grid Grid--withGutter">
+    <div class="Grid-cell u-md-size8of12 u-lg-size8of12">
+
+      <article class="Prose u-layout-prose">
+        <h1>{{ page.title | escape }}</h1> {{ content }}
+      </article>
+
+    </div>
+
+    <div class="Grid-cell u-sizeFull u-md-size4of12 u-lg-size4of12">
+      <div class="u-cf u-padding-bottom-xxl">
+        {% include share.html %}
+      </div>
+
+      <div class="u-sizeFull u-md-size11of12 u-lg-size11of12" id="subnav">
+
+        {% for page in site.pages %} {{ page.url }} {% endfor %}
+
+        {% assign subnav = site.pages %}
+        {% include linklist.html items=subnav %}
+
+      </div>
+    </div>
+  </div>
 
 </div>
