--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+{% assign active_lang = page.lang | default: site.lang | default: "en" %}
+{% assign t = site.data.l10n[active_lang].t %}
+
 <div class="u-layout-wide u-layoutCenter u-padding-bottom-xxl u-padding-top-xxl u-padding-r-left u-padding-r-right">
 
   <div class="Grid Grid--withGutter">
